welcome.lessons.welcome.variables.Variables.scala.error
Variables:9: error: not found: value dejafait
while(dejafait!=nbPas){
      ^Variables:12: error: not found: value dejafait
 dejafait= dejaFait + 1;
 ^